WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238683
Fix build break after
r292225
for Playstation.
https://bugs.webkit.org/show_bug.cgi?id=238683
Summary
Fix build break after r292225 for Playstation.
Jigen Zhou
Reported
2022-04-01 13:36:06 PDT
The following errors occur for Playstation build after
r292225
: C:/work/webkit/jenkins/neko/Source/WebKit/Platform/IPC/unix/IPCSemaphoreUnix.cpp:143:12: error: member access into incomplete type 'IPC::Encoder' encoder.addAttachment(Attachment(duplicate)); ^ C:/work/webkit/jenkins/neko/Source/WebKit/Platform/IPC\IPCSemaphore.h:42:7: note: forward declaration of 'IPC::Encoder' class Encoder; ^ C:/work/webkit/jenkins/neko/Source/WebKit/Platform/IPC/unix/IPCSemaphoreUnix.cpp:148:30: error: member access into incomplete type 'IPC::Decoder' auto attachment = decoder.takeLastAttachment(); ^ C:/work/webkit/jenkins/neko/Source/WebKit/Platform/IPC\IPCSemaphore.h:41:7: note: forward declaration of 'IPC::Decoder' class Decoder; ^ 2 errors generated.
Attachments
Patch
(1.05 KB, patch)
2022-04-01 14:06 PDT
,
Jigen Zhou
no flags
Details
Formatted Diff
Diff
Patch
(1.05 KB, patch)
2022-04-01 14:23 PDT
,
Jigen Zhou
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jigen Zhou
Comment 1
2022-04-01 14:06:10 PDT
Created
attachment 456399
[details]
Patch
Jigen Zhou
Comment 2
2022-04-01 14:23:53 PDT
Created
attachment 456403
[details]
Patch
EWS
Comment 3
2022-04-01 18:19:40 PDT
Committed
r292248
(
249146@main
): <
https://commits.webkit.org/249146@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456403
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-04-01 18:20:19 PDT
<
rdar://problem/91190868
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug