Fix build break after r292225 for Playstation. https://bugs.webkit.org/show_bug.cgi?id=238683

Patch by Jigen Zhou <jigen.zhou@sony.com> on 2022-04-01
Reviewed by Don Olmstead.

Unreviewed build fix after 292225 for Playstation build.

* Platform/IPC/unix/IPCSemaphoreUnix.cpp:


Canonical link: https://commits.webkit.org/249146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292248 268f45cc-cd09-0410-ab3c-d52691b4dbfc